Salvando alterações locais antes do pull
