# storage/api-docs/api-docs.json
@@ -125,6 +125,11 @@
                                         "format": "password",
                                         "example": "10203040"
                                     },
+                                    "level_access": {
+                                        "type": "interger",
+                                        "format": "number",
+                                        "example": "0"
+                                    },
                                     "password_confirmation": {
                                         "type": "string",
                                         "format": "password",
@@ -1324,6 +1329,11 @@
                         "type": "string",
                         "format": "date-time",
                         "example": "2023-01-01T00:00:00.000Z"
+                    },
+                    "level_access": {
+                        "description": "User's level access",
+                        "type": "interger",
+                        "example": "0"
                     },
                     "updated_at": {
                         "description": "Timestamp when the user was last updated",
